--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#e24f15"
-backgroundColor="#f7f7ff"
+backgroundColor="#ffffff"
 secondaryBackgroundColor="#eef0f5"
 textColor="#070807"
 font="serif"
